--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,98 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <EditText
+        android:id="@+id/main_etUserName"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="72dp"
+        android:background="@drawable/edit_text_boarder"
+        android:ems="10"
+        android:hint=" User Name"
+        android:inputType="text"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/textView"
+        android:layout_width="353dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="56dp"
+        android:background="@android:drawable/zoom_plate"
+        android:backgroundTint="#D6C424"
+        android:gravity="center"
+        android:text="Coupons Managment App"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/main_etPassword"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/edit_text_boarder"
+        android:ems="10"
+        android:hint=" Password"
+        android:inputType="textPassword"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/main_etUserName"
+        app:layout_constraintTop_toBottomOf="@+id/main_etUserName" />
+
+    <RadioGroup
+        android:id="@+id/main_rg"
+        android:layout_width="270dp"
+        android:layout_height="135dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/edit_text_boarder"
+        app:layout_constraintStart_toStartOf="@+id/main_etPassword"
+        app:layout_constraintTop_toBottomOf="@+id/main_etPassword">
+
+        <RadioButton
+            android:id="@+id/main_rbtnAdmin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#937007"
+            android:buttonTint="#937007"
+            android:text="Admin"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <RadioButton
+            android:id="@+id/main_rbtnCompany"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#937007"
+            android:buttonTint="#937007"
+            android:text="Company"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <RadioButton
+            android:id="@+id/main_rbtnUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#937007"
+            android:buttonTint="#937007"
+            android:text="User"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/main_btnSignIn"
+        android:layout_width="176dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="56dp"
+        android:backgroundTint="#A39305"
+        android:text="Log In"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/main_rg"
+        app:layout_constraintTop_toBottomOf="@+id/main_rg" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
