--- a/app/src/main/res/layout/activity_update_company.xml
+++ b/app/src/main/res/layout/activity_update_company.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/manageCustomers_drawer_layout"
+    android:id="@+id/updateCompany_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity"
+    tools:context=".UpdateCompanyActivity"
     tools:openDrawer="start">
 
     <LinearLayout
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/manageCustomers_toolbar"
+            android:id="@+id/updateCompany_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#F3C84A"
@@ -33,14 +33,15 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/manageCustomers_btnAdd"
+                android:id="@+id/updateCompany_btnSave"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
                 android:backgroundTint="#A39305"
-                android:text="Add"
+                android:text="Save"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
 
             <Space
                 android:layout_width="30dp"
@@ -48,70 +49,67 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/manageCustomers_btnUpadate"
+                android:id="@+id/updateCompany_btnCancel"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
                 android:backgroundTint="#A39305"
-                android:text="Update"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Space
-                android:layout_width="30dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/manageCustomers_btnDelete"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:backgroundTint="#A39305"
-                android:text="Delete"
+                android:text="Cancel"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/manageCustomers_etCustomerCode"
-                android:layout_width="271dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Customer ID"
-                android:inputType="text" />
-
-            <ImageButton
-                android:id="@+id/manageCustomers_btnSearch"
-                android:layout_width="38dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_menu_search" />
-        </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="11dp" />
 
-        <FrameLayout
-            android:id="@+id/manageCustomers_fragContainer"
+        <EditText
+            android:id="@+id/updateCompany_etName"
             android:layout_width="match_parent"
-            android:layout_height="521dp">
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter Company Name"
+            android:inputType="text" />
 
-            <ListView
-                android:id="@+id/manageCustomers_lv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="11dp" />
 
-        </FrameLayout>
+        <EditText
+            android:id="@+id/updateCompany_etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="text|textEmailAddress" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="11dp" />
+
+        <EditText
+            android:id="@+id/updateCompany_etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter Password"
+            android:inputType="text|textPassword" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="11dp" />
+
+        <EditText
+            android:id="@+id/updateCompany_etConfirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Confirm Password"
+            android:inputType="text|textPassword" />
+
+
     </LinearLayout>
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -119,5 +117,4 @@
         android:layout_gravity="start"
 
         app:menu="@menu/nav_company_manage" />
-
 </androidx.drawerlayout.widget.DrawerLayout>
