--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -101,7 +101,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:backgroundTint="#A39305"
-                    android:text="Coubons By Price"
+                    android:text="Coupons By Price"
                     android:textSize="20sp" />
 
                 <Space
