--- a/app/src/main/res/layout/activity_update_coupon.xml
+++ b/app/src/main/res/layout/activity_update_coupon.xml
@@ -69,7 +69,9 @@
         app:layout_constraintEnd_toEndOf="@+id/updateCoupon_etDescription"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/updateCoupon_etDescription"
-        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etDescription"
+        android:focusable="false"
+        android:onClick="onStartDateClick"/>
 
     <EditText
         android:id="@+id/updateCoupon_etEndDate"
@@ -82,7 +84,9 @@
         app:layout_constraintEnd_toEndOf="@+id/updateCoupon_etStartDate"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/updateCoupon_etStartDate"
-        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etStartDate" />
+        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etStartDate"
+        android:focusable="false"
+        android:onClick="onEndDateClick"/>
 
     <EditText
         android:id="@+id/updateCoupon_etAmount"
@@ -95,6 +99,7 @@
         app:layout_constraintEnd_toEndOf="@+id/updateCoupon_etEndDate"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/updateCoupon_etEndDate"
+
         app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etEndDate" />
 
     <EditText
