--- a/app/src/main/res/layout/activity_buy_coupon.xml
+++ b/app/src/main/res/layout/activity_buy_coupon.xml
@@ -6,55 +6,135 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".BuyCouponActivity">
 
-<androidx.appcompat.widget.Toolbar
-    android:id="@+id/buyCpn_toolBar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#A57E0A"
-    android:minHeight="?attr/actionBarSize"
-    android:theme="?attr/actionBarTheme"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:title="Buy New Coupon"
-    app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
-    app:titleTextColor="#080909" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/buyCpn_lvCoupons"
-        android:layout_width="387dp"
-        android:layout_height="575dp"
-        android:background="@drawable/border"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buyCpn_btnbuy"
-        app:layout_constraintVertical_bias="0.555" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/buyCpn_toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#A57E0A"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:title="Buy New Coupon"
+            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
+            app:titleTextColor="#080909" />
 
-    <Button
-        android:id="@+id/buyCpn_btnbuy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#A39305"
-        android:text="buy"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.913"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buyCpn_toolBar" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <ImageButton
-    android:id="@+id/buyCpn_btnBack"
-    android:layout_width="63dp"
-    android:layout_height="51dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="8dp"
-    android:backgroundTint="#F6F2F2"
-    android:scaleType="fitCenter"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/buyCpn_toolBar"
-    app:srcCompat="@drawable/back" />
+            <ImageButton
+                android:id="@+id/buyCpn_btnBack"
+                android:layout_width="63dp"
+                android:layout_height="51dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#F6F2F2"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/back" />
+
+            <Space
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/buyCpn_btnbuy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#A39305"
+                android:text="buy"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="409dp"
+            android:layout_height="138dp"
+            android:layout_marginBottom="1dp">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="325dp"
+                android:layout_height="32dp"
+                android:text="choose category"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/buyCpn_categorySpinner"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.154"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <Spinner
+                android:id="@+id/buyCpn_categorySpinner"
+                android:layout_width="348dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                app:layout_constraintBottom_toTopOf="@+id/space"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.213"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Space
+                android:id="@+id/space"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayout" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="383dp"
+                android:layout_height="55dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <EditText
+                    android:id="@+id/buyCpn_etMaxPrice"
+                    android:layout_width="199dp"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Maximum Price"
+                    android:inputType="text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <Space
+                    android:layout_width="58dp"
+                    android:layout_height="58dp"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/buyCpn_btnSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#A39305"
+                    android:text="Search"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+            </LinearLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ListView
+            android:id="@+id/buyCpn_lvCoupons"
+            android:layout_width="395dp"
+            android:layout_height="521dp"
+            android:background="@drawable/border" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
