--- a/app/src/main/res/layout/activity_company_view_profile.xml
+++ b/app/src/main/res/layout/activity_company_view_profile.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".CompanyViewProfileActivity">
 
+    <ImageButton
+        android:id="@+id/fragCompViewProfile_btnBack"
+        android:layout_width="63dp"
+        android:layout_height="51dp"
+        android:backgroundTint="#F6F2F2"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/fragCompViewProfile_tvComID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.64"
+        app:srcCompat="@drawable/back" />
+
     <TextView
         android:id="@+id/fragCompViewProfile_tvComID"
         android:layout_width="140dp"
