--- a/app/src/main/res/layout/activity_manage_customers.xml
+++ b/app/src/main/res/layout/activity_manage_customers.xml
@@ -118,6 +118,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
 
-        app:menu="@menu/nav_company_manage" />
+        app:menu="@menu/nav_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
