--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/customer_drawLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CustomerActivity">
@@ -10,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/customer_toolBar"
             android:layout_width="match_parent"
@@ -107,10 +109,11 @@
             android:layout_height="417dp" />
 
     </LinearLayout>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/customer_nv"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/nav_customer_menu" />
-</androidx.drawerlayout.widget.DrawerLayout >
+</androidx.drawerlayout.widget.DrawerLayout>
