--- a/app/src/main/res/layout/coupon_line.xml
+++ b/app/src/main/res/layout/coupon_line.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:id="@+id/couponLine_layout"
-        android:layout_width="352dp"
-        android:layout_height="185dp"
+        android:layout_width="375dp"
+        android:layout_height="196dp"
         android:background="@drawable/border"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,6 +20,13 @@
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/couponLine_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/image_icon" />
 
             <TextView
                 android:id="@+id/couponLine_tvID"
@@ -41,15 +48,6 @@
                 android:text="companyID"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/copunLine_tvAmount"
-                android:layout_width="114dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@android:drawable/editbox_background_normal"
-                android:gravity="center|start"
-                android:text="amount"
-                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -58,13 +56,13 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/copunLine_tvPrice"
+                android:id="@+id/copunLine_tvAmount"
                 android:layout_width="114dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@android:drawable/editbox_background_normal"
                 android:gravity="center|start"
-                android:text="price"
+                android:text="amount"
                 android:textSize="16sp" />
 
             <TextView
@@ -92,6 +90,16 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/copunLine_tvPrice"
+                android:layout_width="114dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:drawable/editbox_background_normal"
+                android:gravity="center|start"
+                android:text="price"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/copunLine_tvTitle"
