--- a/app/src/main/res/layout/activity_add_company.xml
+++ b/app/src/main/res/layout/activity_add_company.xml
@@ -116,5 +116,5 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
 
-        app:menu="@menu/nav_company_manage" />
+        app:menu="@menu/nav_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
