QrCode + CustomerActivity updates

--- a/app/src/main/res/layout/coupon_line.xml
+++ b/app/src/main/res/layout/coupon_line.xml
@@ -23,8 +23,8 @@
 
             <ImageView
                 android:id="@+id/couponLine_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="111dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:src="@drawable/image_icon" />
 
