--- a/app/src/main/res/layout/company_line.xml
+++ b/app/src/main/res/layout/company_line.xml
@@ -7,56 +7,65 @@
     android:background="@android:drawable/editbox_dropdown_light_frame"
     android:backgroundTint="#F4D8AE">
 
-    <TextView
-        android:id="@+id/companyLine_tvComPassword"
-        android:layout_width="176dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="12dp"
-        android:background="@android:drawable/editbox_background_normal"
-        android:gravity="center|start"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/companyLine_tvComMail"
-        app:layout_constraintStart_toEndOf="@+id/companyLine_tvComMail"
-        app:layout_constraintTop_toTopOf="@+id/companyLine_tvComMail"
-        app:layout_constraintVertical_bias="0.0" />
+    <LinearLayout
+        android:id="@+id/company_LLline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="3dp">
 
-    <TextView
-        android:id="@+id/companyLine_tvComCode"
-        android:layout_width="89dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@android:drawable/editbox_background_normal"
-        android:gravity="center|start"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/companyLine_tvComName"
-        android:layout_width="279dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:background="@android:drawable/editbox_background_normal"
-        android:gravity="center|start"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/companyLine_tvComCode"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.076"
-        app:layout_constraintStart_toEndOf="@+id/companyLine_tvComCode"
-        app:layout_constraintTop_toTopOf="@+id/companyLine_tvComCode"
-        app:layout_constraintVertical_bias="1.0" />
+            <TextView
+                android:id="@+id/companyLine_tvComCode"
+                android:layout_width="101dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="8dp"
+                android:background="@android:drawable/editbox_background_normal"
+                android:gravity="center|start"
+                android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/companyLine_tvComMail"
-        android:layout_width="193dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:background="@android:drawable/editbox_background_normal"
-        android:gravity="center|start"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/companyLine_tvComCode" />
+            <TextView
+                android:id="@+id/companyLine_tvComName"
+                android:layout_width="285dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="8dp"
+                android:background="@android:drawable/editbox_background_normal"
+                android:gravity="center|start"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/companyLine_tvComMail"
+                android:layout_width="205dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="8dp"
+                android:background="@android:drawable/editbox_background_normal"
+                android:gravity="center|start"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/companyLine_tvComPassword"
+                android:layout_width="174dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="8dp"
+                android:background="@android:drawable/editbox_background_normal"
+                android:gravity="center|start"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
